--- a/data/publication.yml
+++ b/data/publication.yml
@@ -5,8 +5,8 @@
 # This file houses the bibliographic info and general metadata for your digital
 # publication.
 
-title: Quire
-subtitle: Multi-Format Publishing
+title: Graduate Symposium Compendium
+subtitle: 2017 Nasher Prize
 contributor_as_it_appears: # Author Name
 reading_line: A digital publication framework built on Hugo
 
